# rsomics-tmm-norm

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  mkmatrix.py  tmm_oracle.R
tests/golden/: allzero_column.tsv  counts.tsv  factors.golden.tsv  nan_literal.tsv
