[package]
name = "rsomics-tmm-norm"
version = "0.1.1"
description = "TMM (trimmed mean of M-values) per-sample normalization factors for a count matrix — Rust port of edgeR calcNormFactors(method=\"TMM\")"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-tmm-norm"
path = "src/main.rs"

[lib]
name = "rsomics_tmm_norm"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
